# nexia-list

./: ECOSYSTEM.scm  MAINTAINERS.adoc  META.scm  README.adoc  ROADMAP.adoc  STATE.scm  deno.json
core/: Cargo.toml
core/src/: lib.rs  note.rs  notebook.rs  storage.rs
desktop/: Cargo.toml  build.rs  tauri.conf.json
desktop/src/: lib.rs  main.rs
ui/: rescript.json
ui/src/: Main.res  Model.res  Msg.res  Types.res  Update.res  View.res
web/: index.html  styles.css
