# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "nexia-core"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Core engine for Nexia knowledge management"
repository = "https://github.com/hyperpolymath/nexia-list"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["wasm-bindgen", "console_error_panic_hook"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

# Optional WASM support
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
pretty_assertions = "1.0"
