# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "nexia-desktop"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Nexia desktop application"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
nexia-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
